--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .coverimage {
     width: 100%;
-    height: 100px;}     
+    height: 50%;}     
 body,.text{margin-left:150px;margin-right:150px;margin-top:70px; padding:0px;
   text-align:justify;
   font-size:14pt;
