--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
-.coverimage {
+.coverimage, .a {
     width: 100%;
     height: 50%;}   
-.a {width:70%; height:70%}
 body,.text{margin-left:150px;margin-right:150px;margin-top:70px; padding:0px;
   text-align:justify;
   font-size:14pt;
