--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .coverimage {
     width: 100%;
     height: 50%;}   
-.A {width:30%; height: 30%}
+.imageA {width:30%; height: 30%}
 body,.text{margin-left:150px;margin-right:150px;margin-top:70px; padding:0px;
   text-align:justify;
   font-size:14pt;
