--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 .coverimage {
     width: 100%;
     height: 50%;}   
-.imageA {width:30%; height: 30%;}
+.imageA {width:80%; height: 38%;}
+.imageB {width:80%; height: 38%;}
+.imageC {width:80%; height: 38%;}
+.imageD {width:80%; height: 38%;}
 body,.text{margin-left:150px;margin-right:150px;margin-top:70px; padding:0px;
   text-align:justify;
   font-size:14pt;
