--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
 .imageB {width:80%; height: 80%;}
 .imageC {width:80%; height: 80%;}
 .imageD {width:80%; height: 80%;}
+.imageE {width:80%; height: 80%;}
+.imageF {width:80%; height: 80%;}
+.imageG {width:80%; height: 80%;}
 body,.text{margin-left:150px;margin-right:150px;margin-top:70px; padding:0px;
   text-align:justify;
   font-size:14pt;
