--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,5 @@ h1{;margin-left:auto;margin-:   ;right:auto;font-size:30pt;text-align:center;fon
 ;font-weight:bold;line-height:40px;}
 h3{text-align:center; font-size:12pt;line-height:80px}
 q{font-size:18pt;text-align:center;line-height:40px; font-family: 'Inknut Antiqua', serif;}
-.caption{font-size:8pt;}
-
+h5,.caption{text-align:center;font-size:10pt;margin-bottom:25px;line-height:20px}
 
